# msv2-inference

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
api/: app.py
api/core/: config.py  dependencies.py  lifespan.py  logger.py
api/inference/: handler.py  openl3.py
api/models/: api_schemas.py
api/routers/: health.py  inference.py
k8s/: knative-service.yaml  secrets.yaml
