[project]
name = "msv2-inference"
version = "0.1.0"
description = "OpenL3 audio embedding inference service for Knative"
readme = "README.md"
requires-python = ">=3.8,<3.12"
dependencies = [
    "fastapi>=0.100.0",
    "librosa>=0.10.0",
    "minio>=7.1.0",
    "numpy>=1.21.0,<1.24.0",
    "onnxruntime-gpu==1.14.1",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.6",
    "soundfile>=0.12.0",
    "typing-extensions>=4.0.0",
    "uvicorn>=0.20.0",
]

[dependency-groups]
dev = [
    "black>=23.0.0",
    "ruff>=0.14.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]

[tool.setuptools]
packages = ["api"]
